--- a/src/App.css
+++ b/src/App.css
@@ -469,3 +469,10 @@ Stripe Styles
   color: var(--clr-grey-5);
   margin-right: 1rem;
 }
+.footer {
+  position: fixed;
+  bottom: 0;
+  text-align: center;
+  width: 100%;
+  height: 2rem;
+}
